# youtube-video-extractor

./: .gitignore  README.md  channels.example.yaml  pyproject.toml
src/yt_extractor/: __init__.py  __main__.py  config.py  config_loader.py  exporter.py  extractor.py
